@@ -49,8 +49,7 @@ namespace mesmer
     if(!excessReactantLocation){
       m_rct1 = tmp_rct1;
       m_rct2 = tmp_rct2;
-    }
-    else {
+    } else {
       m_rct1 = tmp_rct2;
       m_rct2 = tmp_rct1;
     }
@@ -76,8 +75,7 @@ namespace mesmer
       pMol1 = GetMolRef(ppProduct1);
       if (pMol1){
         m_pdt1 = pMol1;
-      }
-      else {
+      } else {
         cerr << "Irreversible reaction" << getName() << " has no product defined." << endl;
         return false;
       }
@@ -113,14 +111,14 @@ namespace mesmer
     const int rctLocation = isomermap[m_rct1] ;
     const int rShiftedGrains(m_rct1->getColl().reservoirShift());
 
-    const int colloptrsize   = m_rct1->getColl().get_colloptrsize();
+    const int colloptrsize   = m_rct1->getColl().get_redColloptrsize();
     const int forwardThreshE = get_EffGrnFwdThreshold();
     const int fluxStartIdx   = get_fluxFirstNonZeroIdx();
 
 	m_MtxGrnKf.clear();
     m_MtxGrnKf.resize(colloptrsize , 0.0);
 
-    for ( int i=fluxStartIdx, j = forwardThreshE; j < colloptrsize; ++i, ++j) {
+    for ( int i=fluxStartIdx, j = forwardThreshE; j < colloptrsize + rShiftedGrains; ++i, ++j) {
       int ii(rctLocation + j - rShiftedGrains) ;
 	  double rtcf = m_GrainFlux[i] / rctDOS[j] ;
       (*CollOptr)[ii][ii] -= qd_real(rMeanOmega * rtcf);  // Forward loss reaction.
